# CommonLowLevelTracingKit

./: .clang-format  .clang-tidy  .devcontainer.json  .gitignore  .iwyu.imp  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO1.1.txt  LICENSE  MAINTAINERS.md  NOTICE.txt  README.md  VERSION.md  clltk.code-workspace
command_line_tool/: CMakeLists.txt
command_line_tool/commands/decode/: CMakeLists.txt  decoder.cpp  filter.cpp  filter.hpp  list.cpp  meta.cpp  timespec.cpp  timespec.hpp
command_line_tool/commands/live/: CMakeLists.txt  live.cpp  ordered_buffer.cpp  ordered_buffer.hpp
command_line_tool/commands/snapshot/: CMakeLists.txt  snapshot.cpp
command_line_tool/commands/trace/: CMakeLists.txt  tracebuffer.cpp  tracepipe.cpp  tracepoint.cpp
command_line_tool/interface/: CMakeLists.txt  filter.cpp  gzip_output.cpp  ordered_buffer.cpp  output.cpp
command_line_tool/interface/commands/: filter.cpp  filter.hpp  gzip_output.hpp  interface.hpp  ordered_buffer.cpp  ordered_buffer.hpp  output.hpp  timespec.cpp  timespec.hpp
command_line_tool/main/: main.cpp  validators.cpp
decoder_tool/: CMakeLists.txt
decoder_tool/cpp/: .clang-format  CMakeLists.txt
decoder_tool/cpp/source/: Meta.cpp  Pool.cpp  ToString.cpp  Tracebuffer.cpp  Tracepoint.cpp  TracepointInternal.hpp
decoder_tool/python/: clltk_decoder.py
examples/: CMakeLists.txt
examples/complex_c/: CMakeLists.txt  complex_c.c
examples/complex_cpp/: CMakeLists.txt  complex_cpp.cpp
examples/extreme_c/: CMakeLists.txt  extreme_c.py
examples/format_c/: CMakeLists.txt  gen_format_c.py
examples/process_threads/: CMakeLists.txt  process_threads.cpp
examples/simple_c/: CMakeLists.txt  simple_c.c
examples/simple_cpp/: CMakeLists.txt  simple_cpp.cpp
examples/simple_kernel_module/: Kbuild  Makefile  kthreadtest.c  kthreadtest.h  more.c  more.h  simple.c
examples/snapshot_cpp/: CMakeLists.txt  snapshot.cpp
examples/with_libraries/: CMakeLists.txt  dynamic.cpp  shared.cpp  static.cpp  template.hpp  with_libraries.cpp  with_libraries.hpp
snapshot_library/: CMakeLists.txt
snapshot_library/source/: file.cpp  file.hpp  snapshot.cpp  snapshot_gzip.cpp  snapshot_tar.cpp
tests/: CMakeLists.txt  test_backwards_compat.py  test_build_failures.py  test_build_output.py  test_clltk_cmd.py  test_decode_cmd.py  test_decoder.py  test_error_handling.py  test_examples.py  test_global_options.py  test_live_base.py  test_live_edge_cases.py  test_live_features.py  test_live_multibuffer.py  test_live_realtime.py  test_live_stress.py  test_meta_cmd.py  test_snapshot.py  test_system.py  test_trace_cmd.py  test_valid_build.py
tests/cmd.tests/: CMakeLists.txt  filter.tests.cpp  ordered_buffer.tests.cpp  timespec.tests.cpp
tests/decoder.tests/: .clang-format  CMakeLists.txt  DamagedFile.tests.cpp  Meta.tests.cpp  SnapTracebuffer.tests.cpp  SyncTracebuffer.tests.cpp  TracepointDynamic.tests.cpp  TracepointStatic.tests.cpp  args_cpp.py  definition.tests.cpp  file.tests.cpp  format_cpp.py  formatter.tests.cpp  helper.hpp  ringbuffer.tests.cpp  timespec.tests.cpp  tracebufferfile.tests.cpp
tests/decoder_tests/: decode_tests.py
tests/helpers/: __init__.py  base.py  build_examples_helper.py  build_temp_target.py  clltk_cmd.py  library_validation.py
tests/helpers/temp_target/: CMakeLists.txt
tests/integration_tests/: __init__.py  test_clltk_cmd.py  test_decode_cmd.py  test_error_handling.py  test_global_options.py  test_list_cmd.py  test_live_basic.py  test_live_command.py  test_live_edge_cases.py  test_live_features.py  test_live_multibuffer.py  test_live_realtime.py  test_live_stress.py  test_snapshot_cmd.py  test_trace_cmd.py  test_tracepipe_cmd.py
tests/packaging/: test_consumer_cmake.py  test_consumer_pkgconfig.py  test_rpm_artifacts.py  test_rpm_install.py  test_srpm_rebuild.py
tests/packaging/consumer_project/: CMakeLists.txt  main.c
tests/packaging/helpers/: consumer.py  rpm.py
tests/python_tests/: build_failes_tests.py  examples_tests.py  snapshot_tests.py  system_tests.py  valid_build_test.py
tests/python_tests/helper/: __init__.py  build_examples_helper.py  build_temp_target.py
tests/robot.tests/: CMakeLists.txt
tests/robot.tests/build_output/: build_output.robot
tests/robot.tests/clltk-cmd/: clltk_cmd_base.robot  clltk_tracebuffer.robot  clltk_tracepipe.robot  clltk_tracepoints.robot
tests/robot.tests/robot_resources/: __init__.py  base.py  build.py  build.resource  runtime.py  runtime.resource
tests/robot.tests/tracing/: invalid_source.robot  simple.robot
tests/tracing.tests/: CMakeLists.txt
tests/tracing.tests/abstraction.tests/: CMakeLists.txt  file.tests.cpp  info.tests.cpp  memory.tests.cpp  parallelism.tests.cpp  pread_pwrite.tests.cpp  read_write_mmap.tests.cpp  sync.tests.cpp
tests/tracing.tests/api.tests/: CMakeLists.txt  _open_tracebuffer.tests.cpp  _tracebuffer_add_to_stack.tests.cpp  api.test.cpp  argument.test.cpp  argument_c.test.cpp  tracing.test.cpp
tests/tracing.tests/arguments.tests/: first_time_check.tests.cpp  get_arguments.tests.cpp  total_raw_argument_size.tests.cpp
tests/tracing.tests/crc8.tests/: crc8.test.cpp
tests/tracing.tests/definition.tests/: CMakeLists.txt  definition.test.cpp
tests/tracing.tests/macro.tests/: file_offset._static_tests.c  type_deduction.static_tests.c  type_deduction.static_tests.cpp  type_deduction.tests.cpp
tests/tracing.tests/md5.tests/: md5.test.cpp
tests/tracing.tests/meta.tests/: meta_macro.tests.cpp
tests/tracing.tests/ringbuffer.tests/: CMakeLists.txt  clear.tests.cpp  overflow.tests.cpp  recovery.tests.cpp  ringbuffer.tests.cpp  ringbuffer_init.tests.cpp
tests/tracing.tests/snapshot.tests/: CMakeLists.txt  snapshot.tests.cpp
tests/tracing.tests/unique_stack.tests/: CMakeLists.txt  unique_stack.tests.cpp
tests/tracing.tests/vector.tests/: CMakeLists.txt  vector.test.cpp
tracing_library/: CMakeLists.txt
tracing_library/source/: arguments.c  arguments.h  tracebuffer.c  tracebuffer.h  tracepoint.c  tracepoint.h  tracepoint_layout_assert.c
tracing_library/source/crc8/: LICENSE  (+2 more)
(+162 files in other folders)
